syntax = "proto3";
package tendermint.spn.launch;

option go_package = "github.com/tendermint/spn/x/launch/types";

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";
import "cosmos/coin.proto";

message VestedAccount {
  string chainID = 1;
  string address = 2;
  repeated cosmos.Coin startingBalance = 3 [(gogoproto.nullable) = false, (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin", (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  google.protobuf.Any vestingOptions = 4;
}

// DelayedVesting represents options for delayed vesting
// Delayed vesting is the type of vesting where all vesting coins are vested once end time is reached
message DelayedVesting {
  repeated cosmos.Coin vesting = 3 [(gogoproto.nullable) = false, (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin", (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  int64 endTime = 1;
}
